# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: check.yml
page_analyzer/: app.py  db.py  url_handling.py  url_merge_tool.py  utils.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  index_url.html  index_urls.html  url_detail.html
