[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project - Page Analyzer"
authors = ["DanilMullakhmetov <danilmullakhmetov@gmail.com>"]
readme = "README.md"

packages = [
    { include = "page_analyzer" }
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
page_analyzer = "page_analyzer.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
